--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
