--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
+    "swiper": "^8.0.7",
     "yup": "^1.0.2"
   },
   "devDependencies": {
